# DDB

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  README.txt  compile_nu_bin.sh  dep.sh  distributeddebuggerkube.yaml  jaegertrace.py  noobextension.py  notes.md  prepare.sh  prepare_mosquitto.sh  ptime.py  setup.sh  setup_machine.sh  test.mjs  trace_data.txt
adapter/: .eslintrc  .gitignore  .markdownlint.yml  .markdownlintignore  .mocharc.yml  .nycrc.yml  .prettierignore  .prettierrc  .vscodeignore  CHANGELOG.md  HACKING.md  README.md  cspell.json  package-lock.json  package.json  tsconfig.json
adapter/sampleWorkSpace/: raft  start_raft.sh
adapter/src/: DDBViewProvider.ts  gdb.ts  logger.ts  mibase.ts
apps/: apps.code-workspace  faketime_support.sh  start_raft.sh
apps/.ddb/: dbg_auto_discovery.yaml  dbg_auto_discovery_sudo.yaml  dbg_redisraft.yaml  serviceweaver_dis.yml
apps/examples/dbt/proto/: CMakeLists.txt
apps/raft/: .gitignore  README.md  build.sh  start_raft.sh
apps/redisraft/: .gitignore  notes.md
bench/: bench_gdb.py  bench_gdbmiparser.py  bench_paramiko.py  gdb_ts_ext.py
conf/: mosquitto.conf
connector/: .gitignore  Makefile
connector/ddb/: basic.hpp  integration.hpp  service_reporter.hpp
connector/go-connector/: conn.go
ddb/: .gdbinit  cmd_router.py  gdb_manager.py  install.sh  link.sh  pyproject.toml  requirements.txt  response_processor.py  setup.py  setup.sh  utils.py
ddb/configs/: dbg_auto_discovery.yaml  dbg_multithread_print.yaml  dbg_multithread_print_multiserver.yaml  dbg_multithread_print_multiserver_remote.yaml  dbg_multithread_print_multiserver_remote_multinodes.yaml  dbg_nested_frame.yaml  dbg_nu_c6525.yaml  dbg_nu_c6525_exp.yaml  dbg_nu_migrate_auto_discovery.yaml  dbg_nu_migrate_remote.yaml  dbg_nu_migrate_remote_service_discovery.yaml  pidconfig.yaml  serviceweaverConfig.yaml
ddb/ddb/: cmd_processor.py  cmd_router.py  cmd_tracker.py  config.py  data_struct.py  event_loop.py  gdb_controller.py  gdb_manager.py  gdb_session.py  gdbparser.py  gdbserver_starter.py  logging.py  main.py  mi_formatter.py  port_mgr.py  response_processor.py  response_transformer.py  service_mgr.py  startup.py  state_manager.py  status_server.py  utils.py
ddb/ddb/gdb_ext/: runtime-gdb-grpc.py
ddb/iddb/: about.py  cmd_processor.py  cmd_router.py  cmd_tracker.py  config.py  data_struct.py  event_loop.py  framework_adoption.py  gdb_controller.py  gdb_manager.py  gdb_session.py  gdbparser.py  gdbserver_starter.py  globals.py  logging.py  main.py  mtracer.py  response_processor.py  response_transformer.py  service_mgr.py  startup.py  state_manager.py  status_server.py
ddb/iddb/cython/: cython_ssh_worker.pyx
ddb/iddb/extension/: dl_detector.py
ddb/iddb/gdb_ext/: runtime-gdb-grpc.py
ddb/iddb/helper/: tracer.py
ddb/python/: .gitignore
ddb/python/configs/: dbg_auto_discovery_shim.yaml  dbg_nu_c6525_exp_bkpts.yaml  serviceweaverConfig.yaml
ddb/python/iddb/: about.py  cmd_processor.py  data_struct.py  event_loop.py  framework_adoption.py  gdb_manager.py  gdb_session.py  gdbparser.py  gdbserver_starter.py  logging.py  main.py  response_transformer.py  startup.py
ddb/python/iddb/gdb_ext/: runtime-gdb-grpc.py
ddb/rust/: Cargo.toml  note.md
ddb/rust/core/: Cargo.toml
ddb/rust/core/assets/conf/: emqx.conf
ddb/rust/core/assets/gdb_ext/: proclet.py  runtime-gdb.py  runtime-serviceweaver.py
ddb/rust/core/assets/scripts/: start_emqx.sh
ddb/rust/core/configs/: dbg_auto_discovery_shim.yaml  dbg_cham_cluster.yaml  dbg_nu_c6525_exp.yaml  dbg_quicksand.yaml  serviceweaverConfig.yaml
ddb/rust/core/src/: app.rs  arg.rs  dbg_mgr.rs  dbg_mgr_old.rs  global.rs  logging.rs  main.rs  setup.rs  status.rs
ddb/rust/core/src/api/: server.rs
ddb/rust/core/src/cmd_flow/: framework_adapter.rs  handler.rs  input.rs  mod.rs  output.rs  router.rs  tracker.rs
ddb/rust/core/src/common/: config.rs  counter.rs  default_vals.rs  macros.rs  mod.rs  sd_defaults.rs  utils.rs
ddb/rust/core/src/connection/: mod.rs  ssh_client.rs  ssh_client_channel.rs
ddb/rust/core/src/dbg_cmd/: gdb_cmd.rs  mod.rs
ddb/rust/core/src/dbg_ctrl/: dbg_bridge_ctrl.rs  dbg_ctrl.rs  mod.rs
ddb/rust/core/src/dbg_parser/: gdb_parser.rs  mod.rs
ddb/rust/core/src/discovery/: broker.rs  discovery_message_producer.rs  k8s_producer.rs  mod.rs  mqtt_producer.rs  service_mgr.rs  subscriber.rs
ddb/rust/core/src/feature/: mod.rs  proclet_ctrl.rs  proclet_restore.rs
ddb/rust/core/src/session/: dbg_session.rs  mod.rs
ddb/rust/core/src/state/: bkpt_mgr.rs  group_mgr.rs  mod.rs  proclet_mgr.rs  session_mgr.rs  source_mgr.rs  state_mgr.rs  thread_mgr.rs
ddb/rust/gdbmi/: Cargo.toml
ddb/rust/gdbmi/src/: lib.rs  parser.rs  raw.rs  worker.rs
ddb/rust/scripts/: install.sh
ddb/testing/: test_session_q.py
debug-adapter/: package-lock.json  package.json  tsconfig.json
examples/dist_deadlock/app/: CMakeLists.txt  node_a.cpp  node_b.cpp
examples/dist_deadlock/proto/: CMakeLists.txt
examples/dist_deadlock/src/: CMakeLists.txt  nodea.cpp  nodeb.cpp
exp/: README.md  prep_machines.sh  pyproject.toml  shared.sh
faketimetest/: extension.py
gdb_ext/: noobextension.py  runtime-gdb-grpc.py  runtime-gdb.py
libddb/: .gdbinit  .gitignore  Makefile  compile_commands.json  event.c  extension.py  hook.c  logger.c  monitor.c  shim.c
libfaketime/: .gitignore
nu_bin/: .conf_1304575
nu_scripts/: rt.sh  setup.sh  setup_machine.sh  shared.sh  start_rt.sh  stop_rt.sh
py_testing/: cmd_router.py  cmd_tracker.py  data_struct.py  event_loop.py  gdb_manager.py  gdb_session.py  gdbserver_starter.py  link.sh  main.py  mi_formatter.py  requirements.txt  response_processor.py  response_transformer.py  session_meta.py  setup.sh  state_manager.py  utils.py
scripts/: config.sh  dep.sh  install.sh  prepare_mosquitto.sh  rpc_framework_setup.sh  setup.sh  setup_debug_container.ipynb  setup_gdb.sh  setup_machine.sh
src/: Cargo.toml
test_binaries/: multithread_print.cpp  nested_frame.cpp
wrapper/: ddb_on_sudo.sh  ddb_runapp.sh  ddb_runapp_on_sudo.sh
(+443 files in other folders)
