[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iddb"
dynamic = [
  "version"
]
authors = [
  { name="NSL", email="yiboyan@usc.edu" },
]
description = "Interactive Distributed Debugger (iDDB)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",

  "Topic :: Software Development :: Debuggers",
  "Topic :: System :: Distributed Computing",

  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "pygdbmi",
  "paramiko",
  "kubernetes",
  "pyyaml>=5.4.1",
  "paho-mqtt",
  "flask",
  "opentelemetry-sdk",
  "opentelemetry-exporter-jaeger",
  "debugpy",
  "setuptools>=75.3.0",
  "hatch>=1.13.0",
  "yappi>=1.6.10",
  "viztracer>=0.16.3",
  "asyncssh>=2.19.0",
  "dill>=0.3.9",
  "cloudpickle>=3.1.0",
  "cython>=3.0.11",
]

[tool.hatch.version]
path = "iddb/about.py"

[project.scripts]
ddb = "iddb.main:main"

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/"
